5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4160/executions/1723_2498.log
== TEST (2019-05-09 11:27:02) 
-- CODE:
ha  = int(input("Habitantes a: "))
hb  = int(input("Habitantes b: "))
pa = float(input("Percentual de crescimento populacional de a: "))
pb = float(input("Percentual de crescimento populacional de b: "))
pera = pa/100
perb = pb/100
t = 0
ano = 0
while (ha < hb):
	ha = ha + (ha * pera)
	hb = hb + (h * perb)
	ano = nao +1
print(ano)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    hb = hb + (h * perb)
NameError: name 'h' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:27:07) 
-- CODE:
ha  = int(input("Habitantes a: "))
hb  = int(input("Habitantes b: "))
pa = float(input("Percentual de crescimento populacional de a: "))
pb = float(input("Percentual de crescimento populacional de b: "))
pera = pa/100
perb = pb/100
t = 0
ano = 0
while (ha < hb):
	ha = ha + (ha * pera)
	hb = hb + (h * perb)
	ano = nao +1
print(ano)
	
-- EXECUTION TIME:
0.163184
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2498/main.py", line 11, in <module>
    hb = hb + (h * perb)
NameError: name 'h' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:27:23) 
-- CODE:
ha  = int(input("Habitantes a: "))
hb  = int(input("Habitantes b: "))
pa = float(input("Percentual de crescimento populacional de a: "))
pb = float(input("Percentual de crescimento populacional de b: "))
pera = pa/100
perb = pb/100
t = 0
ano = 0
while (ha < hb):
	ha = ha + (ha * pera)
	hb = hb + (h * perb)
	ano = ano +1
print(ano)
	
-- EXECUTION TIME:
0.180463
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2498/main.py", line 11, in <module>
    hb = hb + (h * perb)
NameError: name 'h' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:27:42) 
-- CODE:
ha  = int(input("Habitantes a: "))
hb  = int(input("Habitantes b: "))
pa = float(input("Percentual de crescimento populacional de a: "))
pb = float(input("Percentual de crescimento populacional de b: "))
pera = pa/100
perb = pb/100
t = 0
ano = 0
while (ha < hb):
	ha = ha + (ha * pera)
	hb = hb + (hb * perb)
	ano = ano + 1
print(ano)
	
-- EXECUTION TIME:
0.124271
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
5
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
45
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
6
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
